; ModuleID = '/home/carl/AnghaBench/RetroArch/frontend/extr_frontend_driver.c_frontend_driver_watch_path_for_changes.c'
source_filename = "/home/carl/AnghaBench/RetroArch/frontend/extr_frontend_driver.c_frontend_driver_watch_path_for_changes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.string_list = type { i32 }
%struct.TYPE_3__ = type { i32 (%struct.string_list*, i32, i32**)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @frontend_driver_watch_path_for_changes(%struct.string_list* %0, i32 %1, i32** %2) #0 {
  %4 = alloca %struct.string_list*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32**, align 8
  %7 = alloca %struct.TYPE_3__*, align 8
  store %struct.string_list* %0, %struct.string_list** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32** %2, i32*** %6, align 8
  %8 = call %struct.TYPE_3__* (...) @frontend_get_ptr()
  store %struct.TYPE_3__* %8, %struct.TYPE_3__** %7, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %10 = icmp ne %struct.TYPE_3__* %9, null
  br i1 %10, label %11, label %16

11:                                               ; preds = %3
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32 (%struct.string_list*, i32, i32**)*, i32 (%struct.string_list*, i32, i32**)** %13, align 8
  %15 = icmp ne i32 (%struct.string_list*, i32, i32**)* %14, null
  br i1 %15, label %17, label %16

16:                                               ; preds = %11, %3
  br label %25

17:                                               ; preds = %11
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = load i32 (%struct.string_list*, i32, i32**)*, i32 (%struct.string_list*, i32, i32**)** %19, align 8
  %21 = load %struct.string_list*, %struct.string_list** %4, align 8
  %22 = load i32, i32* %5, align 4
  %23 = load i32**, i32*** %6, align 8
  %24 = call i32 %20(%struct.string_list* %21, i32 %22, i32** %23)
  br label %25

25:                                               ; preds = %17, %16
  ret void
}

declare dso_local %struct.TYPE_3__* @frontend_get_ptr(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
